cilium/CiliumNetworkPolicy-allow-hubble-generate-certs-apiserver-egress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-hubble-generate-certs-apiserver-egress
  namespace: kube-system
spec:
  egress:
    - toEntities:
        - kube-apiserver
      toPorts:
        - ports:
            - port: "6443"
              protocol: TCP
  endpointSelector:
    matchLabels:
      batch.kubernetes.io/job-name: hubble-generate-certs
